--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
   },
   "homepage": "https://github.com/FernandoCaudillo10/RWLAutoGrading#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.18.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "validator": "^13.0.0"
   }
 }
