--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "node-sass": "^4.13.1",
+    "qs": "^6.9.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
