--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "node-sass": "^4.13.1",
+    "rc-slider": "^9.2.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "react-slider": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
