--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "node-cron": "^2.0.3",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
