--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "reactjs-popup": "^1.5.0"
+    "reactjs-popup": "^1.5.0",
     "react-slider": "^1.0.3"
   },
   "scripts": {
