--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,13 @@
     "qs": "^6.9.3",
     "rc-slider": "^9.2.4",
     "react": "^16.12.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "reactjs-popup": "^1.5.0",
-    "react-slider": "^1.0.3"
+    "react-slider": "^1.0.3",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
