--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-slider": "^1.0.3",
+    "react-spinners": "^0.8.1",
     "reactjs-popup": "^1.5.0"
   },
   "scripts": {
