--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "dateformat": "^3.0.3",
     "node-sass": "^4.13.1",
     "qs": "^6.9.3",
     "rc-slider": "^9.2.4",
@@ -15,8 +16,8 @@
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "reactjs-popup": "^1.5.0",
-    "react-slider": "^1.0.3"
+    "react-slider": "^1.0.3",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
