--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,15 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
+    "react-redirect": "^1.0.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-slider": "^1.0.3",
-    "reactjs-popup": "^1.5.0"
+    "react-store": "^0.1.3",
+    "reactjs-popup": "^1.5.0",
+    "redux": "^4.0.5",
+    "redux-connect": "^10.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
