--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
+    "react-rangeslider": "^2.2.0",
     "react-redirect": "^1.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
