--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "dateformat": "^3.0.3",
     "email-validator": "^2.0.4",
     "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "qs": "^6.9.3",
     "rc-slider": "^9.2.4",
     "react": "^16.12.0",
@@ -33,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/*.js src/*/*.js --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,5 +52,13 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^2.5.1"
+  }
 }
